Revision history for Perl extension Minilla

{{$NEXT}}

0.014 2018-05-27T02:50:53Z
	- Fix typo
0.013 2018-05-27T02:41:51Z
    - First cpan release
0.011 2018-05-27T01:56:13Z
    - travis: perl versions 5.22+
0.010 2018-05-27T00:26:41Z
	- Added badges for travis & appveyor
0.009 2018-05-27T00:19:45Z
    - Added Test2::V0 dependency
0.008 2018-05-27T00:11:00Z
    - Fix .travis & .appveyor files location (move to repo root)
0.007 2018-05-27T00:03:21Z
    - Adds travis & appveyor tests
0.006 2018-05-26T23:16:48Z
    - Pod corrections
0.005 2018-05-26T23:13:14Z
	- Prevents tmp directory deletion
0.004 2018-05-17T01:31:23Z
    - Get rid of AUTOLOAD cron
    - New synopsis
0.003 2018-05-10T14:50:55Z
    - Separate cron temp directories by mojo mode
0.002 2018-05-10T02:41:49Z
    - First tests passing
0.001 2018-05-10T00:32:30Z
    - Initial commit