@@ -1,7 +1,8 @@
 Revision history for Perl extension Minilla
 
 {{$NEXT}}
-
+    - waits for ioloop to start with ->next_tick
+    - added pod info for extended syntax
 0.014 2018-05-27T02:50:53Z
 	- Fix typo
 0.013 2018-05-27T02:41:51Z
